styles/main.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {

  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;

}

html {

  --font: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;

  --font-size: 1rem;
  --font-size-double: calc(2*var(--font-size));
  --font-size-half: calc(0.5*var(--font-size));
  --font-size-minus: calc(-1*var(--font-size));
  --font-size-minus-double: calc(-2*var(--font-size));
  --font-size-minus-half: calc(-0.5*var(--font-size));

  --header-offset: calc(17 * var(--font-size));
  --header-offset-minus: calc(-1*var(--header-offset));

  --toggle-duration: 0.5s;

  font-size: var(--font-size);
  font-family: var(--font);

  white-space: pre-wrap;
  word-wrap: break-word;

  color: var(--text-color);
  background-color: var(--bg-color);

  transition: background-color var(--toggle-duration);

}

.theme-one-light {

  --text-color:          hsl(230,  8%, 24%);
  --bg-color:            hsl(230,  1%, 98%);
  --text-color-emphasis: hsl(301, 63%, 40%);
  --text-color-link:     hsl(221, 87%, 60%);
  --text-color-visited:  hsl(221, 87%, 60%);



}

.theme-one-dark {

  --text-color:          hsl(220, 14%, 71%);
  --bg-color:            hsl(220, 13%, 18%);
  --text-color-emphasis: hsl(286, 60%, 67%);
  --text-color-link:     hsl(207, 82%, 66%);
  --text-color-visited:  hsl(207, 82%, 66%);



}

.theme-monokai {

  --text-color:          hsl(60,  30%, 96%);
  --bg-color:            hsl(70,   8%, 15%);
  --text-color-emphasis: hsl(338, 95%, 56%);
  --text-color-link:     hsl(190, 81%, 67%);
  --text-color-visited:  hsl(190, 81%, 67%);

}

body {

  width: 80ch;

  margin-left: auto;
  margin-right: auto;

  background-color: var(--bg-color);
  transition: background-color var(--toggle-duration);

}

main {

  background-color: var(--bg-color);

  transition:
    color var(--toggle-duration),
    background-color var(--toggle-duration),
    box-shadow var(--toggle-duration),
    border var(--toggle-duration);

}

header {

  position: sticky;
  top: 0px;

  margin-top: var(--font-size-minus-double);
  padding-bottom: var(--font-size);

  border-bottom: 1px solid var(--text-color);

  background-color: var(--bg-color);
  box-shadow:
    0px
    var(--font-size-half)
    var(--font-size)
    0px
    var(--bg-color);

  transition:
    color var(--toggle-duration),
    background-color var(--toggle-duration),
    box-shadow var(--toggle-duration),
    border var(--toggle-duration);

}

footer {

  position: sticky;
  bottom: 0px;

  padding-top: var(--font-size-minus);

  border-top: 1px solid var(--text-color);

  background-color: var(--bg-color);
  box-shadow:
    0px
    var(--font-size-minus-half)
    var(--font-size)
    0px
    var(--bg-color);

  transition:
    color var(--toggle-duration),
    background-color var(--toggle-duration),
    box-shadow var(--toggle-duration),
    border var(--toggle-duration);

}

main {
  padding-top: var(--font-size);
}

em, .em {

  font-weight: bold;
  font-style: normal;

  color: var(--text-color-emphasis);
  transition: color var(--toggle-duration);

}

a, a:active {

  color: var(--text-color-link);
  transition:
    color var(--toggle-duration),
    background-color var(--toggle-duration);

}

a:visited {

  color: var(--text-color-link-visited);
  transition: color var(--toggle-duration);

}

a:hover{

  color: var(--bg-color);
  background-color: var(--text-color-link);

}

.anchor-no-decoration {
  text-decoration: none;
}

.offset-anchor:target {
  padding-top: var(--header-offset);
}

select {

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

  position: absolute;
  right: 0px;

  text-align: right;

  font-family: var(--font);
  font-size: var(--font-size);
  font-weight: bold;

  color: var(--text-color-link);
  background-color: var(--bg-color);
  border: none;
  transition:
    color 0s,
    background-color var(--toggle-duration);

}

select:hover {
  color: var(--bg-color);
  background-color: var(--text-color-link);
}

select::msg-expand { display: none }

